<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/azul">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="64dp"
        android:background="@color/verde"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:textColor="@color/azul"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_first_text"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"/>

    <EditText
        android:inputType="text"
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_input_text"
        android:autofillHints="name"
        android:textColorHint="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_second_text"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"/>

    <EditText
        android:inputType="text"
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_input_text"
        android:autofillHints="name"
        android:textColorHint="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/Red"
        android:text="@string/text_buttom_delete" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_check"
        android:layout_marginTop="64dp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnCompare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:textSize="30sp"
        android:backgroundTint="@color/verde"
        android:text="@string/text_buttom_comparation" />

    <TextView
        android:id="@+id/response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/white"/>



</LinearLayout>